# app

./: .gitignore  README.md  asr_contextual_correction_prompt.txt  pyproject.toml
asr_correction/: __init__.py  config.py  distances.py  knowledge.py  matcher.py  phonetics.py
asr_corrector/: __init__.py  config.py  correction.py  corrector.py  distance.py  distances.py  entities.py  knowledge.py  knowledge_base.py  matcher.py  phonetics.py  pipeline.py  tones.py
rag_asr_corrector/: __init__.py  config.py  corrector.py  distances.py  ipa.py  knowledge_base.py
rag_asr_corrector/tests/: test_corrector.py  test_distances.py  test_ipa.py
rag_corrector/: __init__.py  corrector.py  entities.py  phonetics.py
src/asr_correction/: __init__.py  config.py  corrector.py  distance.py  matcher.py  phonetics.py  tones.py
src/asr_corrector/: __init__.py  config.py  converter.py  corrector.py  distance.py  distances.py  knowledge_base.py  lexicon.py  matcher.py  metrics.py  phonetics.py  tones.py
src/asr_name_corrector/: __init__.py  corrector.py  lexicon.py  phonetics.py
src/asr_ne_corrector/: __init__.py  corrector.py  entities.py  phonetics.py
src/asr_postcorrection/: __init__.py  cli.py  distance.py  ipa.py  lexicon.py  matcher.py  phonetics.py
src/asr_postproc/: __init__.py  corrector.py  entities.py
src/asr_postprocessor/: __init__.py  correction.py  corrector.py  distance.py  entities.py  matcher.py  phonetics.py  transcription.py
src/bilingual_ipa/: __init__.py  asr_correction.py  contextual_correction.py  conversion.py  converter.py  distances.py  phone_distance.py  phonetic_search.py
tests/: conftest.py  test_asr_correction.py  test_contextual_correction.py  test_converter.py  test_correction.py  test_corrector.py  test_distance.py  test_distances.py  test_matcher.py  test_matching.py  test_phone_distance.py  test_phonetic_search.py  test_phonetics.py  test_txt_correction.py
(+44 files in other folders)
