[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonetic-correction"
version = "0.1.0"
description = "Phonetic post-processing toolkit for multilingual ASR correction"
authors = [
  {name = "OpenAI Assistant"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "phonemizer>=3.2.1",
  "panphon>=0.20.0",
  "pypinyin>=0.49.0",
  "pronouncing>=0.2.0",
  "numpy>=1.24.0",
  "abydos @ git+https://github.com/denizberkin/abydos.git"
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
