[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilingual-ipa"
version = "0.1.0"
description = "Bilingual Chinese/English IPA conversion using phonemizer"
readme = "README.md"
authors = [{name = "AI Assistant"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["phonemizer>=3.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
