[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-asr-corrector"
version = "0.1.0"
description = "Phonetic distance utilities for correcting bilingual ASR outputs with RAG"
readme = "README.md"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "phonemizer>=3.2",
    "panphon>=0.20",
    "numpy>=1.23",
    "dtw-python>=1.4",
    "abydos @ git+https://github.com/denizberkin/abydos.git"
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
